--- a/example.toml
+++ b/example.toml
@@ -1,27 +1,41 @@
-[server]
+# This file is separated into different logical section of an Oasis workflow.
+# Each section specified will be run based on key value pairs define in it.
+# Essentially, each section conveniently runs many underlying webservices.
+# The sections will be run in order.
+#
+[general]
+    log_file = "~/spittal.log"
+    log_level = "DEBUG"
+
+[login]
     url = "127.0.0.1:8000"
     do_timestamps = true
     user = "root"
     password = "password"
 
-[general]
-    log_file = "~/spittal.log"
-    log_level = "DEBUG"
+[model]
+    name = "My test model"
+    [upload]
+        # Optionally, set a default upload directory prefix.
+        upload_directory_path = "./"
+        [dict.areaperil]
+            file_path = "MyAreaPerilDict_Oasis.csv"
+            module_supplier_id = 3
+        [dict.event]
+            module_supplier_id = 3
 
-[upload]
-    # Optionally, set a default upload directory prefix.
-    upload_directory_path = "./"
-    [dict.areaperil]
-        file_path = "MyAreaPerilDict_Oasis.csv"
-        module_supplier_id = 3
-    [dict.event]
-        module_supplier_id = 3
-    [dict.hazfp]
-        module_supplier_id = 3
-    [dict.vuln]
-        module_supplier_id = 3
+[exposure]
+    exposure_name = "My test exposure"
+    [upload]
+        [dict.exposure]
+            file_path = "MyExposureDict.csv"
+            module_supplier_id = 2
+        [version.exposure]
+            file_path = "MyExposureVersion.csv"
+            module_supplier_id = 2
 
-[workflow]
-    upload_files = true
-    create_file_uploads = true
-    create_file_downloads = true
+[benchmark]
+    name = "my benchmark"
+    chunk_size = 10
+    min_chunk = 3
+    max_chunk = 10
