--- a/example.toml
+++ b/example.toml
@@ -6,6 +6,7 @@
 [meta]
 log_file = "spittal.log"
 log_level = "DEBUG"
+system_config = 1
 
 [login]
 url = "http://127.0.0.1:8000"
@@ -14,31 +15,33 @@ password = "password"
 
 [model]
 name = "My test model"
+do_timestamps = true
+key = "Model key"
 
-  [model.upload]
-  do_timestamps = true
-  # Optionally, set a default upload directory prefix.
-  upload_directory_path = "./"
+# Optionally, set a default upload directory prefix.
+directory_path = "./"
 
-    [model.upload.dict.areaperil]
-    file_path = "MyAreaPerilDict_Oasis.csv"
-    module_supplier_id = 3
+  [model.dict.areaperil]
+  file_path = "MyAreaPerilDict_Oasis.csv"
+  module_supplier_id = 3
 
-    [model.upload.dict.event]
-    module_supplier_id = 3
+  [model.dict.event]
+  module_supplier_id = 3
 
 [exposure]
-  exposure_name = "My test exposure"
+name = "My test exposure"
+do_timestamps = true
 
-  [exposure.upload]
-  do_timestamps = true
-    [exposure.upload.dict.exposure]
-      file_path = "MyExposureDict.csv"
-      module_supplier_id = 2
+# Optionally, set a default upload directory prefix.
+directory_path = "./"
 
-    [exposure.upload.version.exposure]
-      file_path = "MyExposureVersion.csv"
-      module_supplier_id = 2
+  [exposure.dict.exposure]
+  file_path = "MyExposureDict.csv"
+  module_supplier_id = 2
+
+  [exposure.version.exposure]
+  file_path = "MyExposureVersion.csv"
+  module_supplier_id = 2
 
 [benchmark]
 name = "my benchmark"
